discussion/kv_engine/155002/155002_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Explicitly start and stop the ExecutorPool

Explicitly start and stop the ExecutorPool from the memcached
core.

Change-Id: I364d0b4b08910fcff9955ce066b9d2ce409be84c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 06:04:17.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 06:57:51.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9570/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9570/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9570/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36523/ : FAILURE

Failure of GoogleTest "PersistentAndEphemeral/StreamTest.MB_32329CursorDroppingResetCursor/ephemeral":

<pre>
[ RUN      ] PersistentAndEphemeral/StreamTest.MB_32329CursorDroppingResetCursor/ephemeral
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.076002\magma.0\wal\wal.1 under ep_engine_ep_unit_tests.db/test.076002 failed: The data is invalid." thrown in TearDown().
[  FAILED  ] PersistentAndEphemeral/StreamTest.MB_32329CursorDroppingResetCursor/ephemeral, where GetParam() = "ephemeral" (71 ms)
PersistentAndEphemeral/StreamTest.MB_32329CursorDroppingResetCursor/ephemeral
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11145/ : FAILURE

Compile error at [2021-06-08T06:29:05.586Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11145/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11565/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11293/ : FAILURE

Compile error at [2021-06-08T06:35:31.827Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11293/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8168/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/116/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31211/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19148/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
